# ObeRPC

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
include/: rxi.json.lua.hpp
src/: main.cpp
